[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ace-vi"                 # PyPI 发布用的名字
version = "0.1.0"
description = "ACE: Aging Cell Embedding for single-cell aging analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Wei Qiu", email = "qiuweipku@gmail.com" }]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.11",
    "pandas>=1.5",
    "anndata==0.8.0",
    "scvi-tools>=0.19",
    "rich>=13"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ace*"]